# periotable

./: .gitignore  .prettierignore  .vercelignore  Makefile  README.md  next-sitemap.config.js  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: action.yaml  desktop.yaml
apps/desktop/: .gitignore  .prettierignore  CHANGELOG.md  Makefile  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/mobile/: Makefile  capacitor.config.ts  package.json
apps/mobile/android/: .gitignore  capacitor.settings.gradle
apps/web/: .eslintrc  .gitattributes  .gitignore  .prettierignore  Makefile  README.md  eslint.config.mjs  knip.ts  next-sitemap.config.js  package.json  tsconfig.json  vitest.config.ts
apps/web/config/: .env.production  .env.testing
apps/web/next/: desktop.mjs  mobile.mjs  web.mjs
apps/web/pages/: _app.tsx  _document.tsx
config/: .env.development  .env.production
next/: desktop.mjs
pages/: 404.tsx  _document.tsx  _error.tsx  index.tsx
pages/api/: index.ts
pages/classifications/: [classification].tsx
pages/compounds/: index.tsx
pages/elements/: [name].tsx
pages/elements/[name]/: [section].tsx  index.tsx
script/site/: webmanifest.ts
script/test/: snapshot.ts
src/api/cors/: index.ts
src/api/endpoint/: index.ts
src/common/: classfication.ts  string.ts
src/web/constant/: index.ts
src/web/hooks/: break-point.ts  (+3 more)
test/integration/: index.test.ts
test/server/: index.ts
test/snapshot/: browser.ts  data.ts  index.test.ts  index.ts
test/unit/: index.test.ts
(+82 files in other folders)
