[package]
name = "periotable"
version = "0.0.0"
description = "A UI/UX friendly desktop application to learn more about Modern Periodic Table of Elements"
authors = ["PoolOfDeath20 <gervinfungdaxuen@gmail.com>"]
repository = "https://github.com/GervinFung/periotable"
readme = "README.md"
homepage = "https://periotable.vercel.app"
license-file = "LICENSE"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["api-all"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
